Fixed dungeon overview not showing up at game over

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -929,6 +929,7 @@ canvas {
 .nh3d-dialog-fixed-actions {
   --nh3d-dialog-fixed-padding: 20px;
   --nh3d-dialog-fixed-actions-bg: #040c18;
+  padding-bottom: 0;
 
   &.is-visible {
     display: flex;
